fix layout shifting with zoomed figures

--- a/src/assets/scss/extra/figure-zoom.scss
+++ b/src/assets/scss/extra/figure-zoom.scss
@@ -2,7 +2,7 @@ figure.zoomable {
   cursor: pointer;
 }
 
-figure.zoomable.zoomed {
+figure.zoomed {
   z-index: 10000;
   position: fixed;
   top: 0;
@@ -25,7 +25,6 @@ figure.zoomable.zoomed {
   img {
     width: auto;
     max-height: 95%;
-    cursor: default;
   }
 
   figcaption {
